fix appendices links

--- a/_posts/2020-08-05-spynote.markdown
+++ b/_posts/2020-08-05-spynote.markdown
@@ -586,12 +586,12 @@ REDACTED: additional checks
 
 [^1]: [https://blog.lookout.com/nation-state-mobile-malware-targets-syrians-with-covid-19-lures](https://blog.lookout.com/nation-state-mobile-malware-targets-syrians-with-covid-19-lures)
 [^2]: [https://blog.malwarebytes.com/threats/remote-access-trojan-rat/](https://blog.malwarebytes.com/threats/remote-access-trojan-rat/)
-[^3]: [Full list of permissions used by the analyzed application](#Appendix A: Full list of permissions used by the analyzed application)
+[^3]: [Full list of permissions used by the analyzed application](#appendix-a-full-list-of-permissions-used-by-the-analyzed-application)
 [^4]: [https://www.makeuseof.com/tag/android-accessibility-services-can-used-hack-phone/](https://www.makeuseof.com/tag/android-accessibility-services-can-used-hack-phone/)
-[^5]:[Pseudo code installing embedded application](#Appendix C: Pseudo code installing embedded application)
+[^5]:[Pseudo code installing embedded application](#appendix-c-pseudo-code-installing-embedded-application)
 [^6]: [Footage of cracked SpyNote v6.4 server](https://www.youtube.com/watch?v=zJXk4FCHx_0)
 [^7]: [https://developer.android.com/guide/topics/admin/device-admin](https://developer.android.com/guide/topics/admin/device-admin)
-[^8]: [Full list of data that malware extracts](#Appendix B: Full list of data that malware extracts)
+[^8]: [Full list of data that malware extracts](#appendix-b-full-list-of-data-that-malware-extracts)
 [^9]: [https://developer.android.com/reference/android/media/MediaRecorder.AudioSource](https://developer.android.com/reference/android/media/MediaRecorder.AudioSource)
 [^10]: [https://tools.ietf.org/html/rfc1952#section-2.2](https://tools.ietf.org/html/rfc1952#section-2.2)
 [^11]: [https://tools.ietf.org/html/rfc4648](https://tools.ietf.org/html/rfc4648)
